// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`determinism harness — the real Bureaucracy campaign (04-core.md §14) > 'full arc to the registry-route ending': event stream is golden-filed 1`] = `
[
  {
    "data": {
      "streamId": "system:start:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "municipality",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "municipality",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "campaignId": "bulgaria-bureaucracy",
      "campaignVersion": "2.0.0",
      "kindId": "story-graph",
    },
    "name": "core.game.created",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "registry_route_1",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "registry_route_1",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "wait",
    },
    "name": "core.action.accepted",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:1",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 1,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "registry_route_event_1",
      "nodeKind": "random",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 1,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "registry_route_event_1",
      "nodeKind": "random",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 1,
    "severity": "trace",
  },
  {
    "data": {
      "goto": "registry_route_event_1a",
      "nodeId": "registry_route_event_1",
      "weight": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.random.picked",
    "ordinal": 3,
    "scope": "game",
    "seq": 1,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "registry_route_event_1a",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 4,
    "scope": "game",
    "seq": 1,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "registry_route_event_1a",
      "nodeKind": "choice",
      "step": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 5,
    "scope": "game",
    "seq": 1,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "registry_route_listen",
    },
    "name": "core.action.accepted",
    "ordinal": 6,
    "scope": "game",
    "seq": 1,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:2",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 2,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "registry_route_2",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 2,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "registry_route_2",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 2,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "registry_route_event_1a_proceed",
    },
    "name": "core.action.accepted",
    "ordinal": 3,
    "scope": "game",
    "seq": 2,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:3",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 3,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "registry_route_event_2",
      "nodeKind": "random",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 3,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "registry_route_event_2",
      "nodeKind": "random",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 3,
    "severity": "trace",
  },
  {
    "data": {
      "goto": "registry_route_event_2a",
      "nodeId": "registry_route_event_2",
      "weight": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.random.picked",
    "ordinal": 3,
    "scope": "game",
    "seq": 3,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "registry_route_event_2a",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 4,
    "scope": "game",
    "seq": 3,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "registry_route_event_2a",
      "nodeKind": "choice",
      "step": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 5,
    "scope": "game",
    "seq": 3,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "registry_route_prepare",
    },
    "name": "core.action.accepted",
    "ordinal": 6,
    "scope": "game",
    "seq": 3,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:4",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 4,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "registry_route_3",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 4,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "registry_route_3",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 4,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "registry_route_event_2a_proceed",
    },
    "name": "core.action.accepted",
    "ordinal": 3,
    "scope": "game",
    "seq": 4,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:5",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 5,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "registry_route_4",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 5,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "registry_route_4",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 5,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "registry_route_steady",
    },
    "name": "core.action.accepted",
    "ordinal": 3,
    "scope": "game",
    "seq": 5,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:6",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 6,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "ending_document_obtained",
      "nodeKind": "ending",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 6,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "ending_document_obtained",
      "nodeKind": "ending",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 6,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "choose_document_obtained",
    },
    "name": "core.action.accepted",
    "ordinal": 3,
    "scope": "game",
    "seq": 6,
    "severity": "info",
  },
  {
    "name": "core.game.ended",
    "ordinal": 4,
    "scope": "game",
    "seq": 6,
    "severity": "info",
  },
]
`;

exports[`determinism harness — the real Bureaucracy campaign (04-core.md §14) > 'full arc to the registry-route ending': serialize() output is golden-filed 1`] = `"{"actionLog":[{"actionId":"wait","seq":0},{"actionId":"registry_route_listen","seq":1},{"actionId":"registry_route_event_1a_proceed","seq":2},{"actionId":"registry_route_prepare","seq":3},{"actionId":"registry_route_event_2a_proceed","seq":4},{"actionId":"registry_route_steady","seq":5},{"actionId":"choose_document_obtained","seq":6}],"campaignId":"bulgaria-bureaucracy","campaignVersion":"2.0.0","formatVersion":1,"gameId":"fixed-game-id","kindId":"story-graph","kindState":{"currentNodeId":"ending_document_obtained","endingId":"document_obtained","turn":9,"unlockedAchievements":["found_registry_route_event_1a","found_registry_route_event_2a","it_builds_character"],"variables":{"connections":2,"preparation":3,"pressure":0,"remembered_archive_route":false,"remembered_registry_route":true,"remembered_supervisor_route":false,"route":"registry_route"},"visitedCounts":{"ending_document_obtained":1,"municipality":1,"registry_route_1":1,"registry_route_2":1,"registry_route_3":1,"registry_route_4":1,"registry_route_event_1":1,"registry_route_event_1a":1,"registry_route_event_2":1,"registry_route_event_2a":1}},"seed":"bureaucracy-seed-1","status":"ended"}"`;

exports[`determinism harness — the real Bureaucracy campaign (04-core.md §14) > 'mid-arc, non-terminal': event stream is golden-filed 1`] = `
[
  {
    "data": {
      "streamId": "system:start:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "municipality",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "municipality",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "campaignId": "bulgaria-bureaucracy",
      "campaignVersion": "2.0.0",
      "kindId": "story-graph",
    },
    "name": "core.game.created",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "registry_route_1",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "registry_route_1",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "wait",
    },
    "name": "core.action.accepted",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
]
`;

exports[`determinism harness — the real Bureaucracy campaign (04-core.md §14) > 'mid-arc, non-terminal': serialize() output is golden-filed 1`] = `"{"actionLog":[{"actionId":"wait","seq":0}],"campaignId":"bulgaria-bureaucracy","campaignVersion":"2.0.0","formatVersion":1,"gameId":"fixed-game-id","kindId":"story-graph","kindState":{"currentNodeId":"registry_route_1","turn":1,"unlockedAchievements":[],"variables":{"connections":0,"preparation":0,"pressure":0,"remembered_archive_route":false,"remembered_registry_route":false,"remembered_supervisor_route":false,"route":"registry_route"},"visitedCounts":{"municipality":1,"registry_route_1":1}},"seed":"bureaucracy-seed-1","status":"active"}"`;
